first pass cpsc2 version 	modified:   init/httpd.init 	modified:   www/d-tacq/acq_home_page.html

--- a/www/d-tacq/acq_home_page.html
+++ b/www/d-tacq/acq_home_page.html
@@ -24,7 +24,7 @@
 
 <body>
    <div class="acqInfo">
-     <p class="acqHeader">ACQ400</p>
+     <p class="acqHeader">CPSC2</p>
      <p class="acqHeader">D-TACQ Solutions High Performance Data Acquisition</p>
      <p class="acqDetail"><a href="http://www.d-tacq.com"><img src="dtacq-logo.jpg" name="Graphic2" width=326 height=244></a></p>
      <p class="acqDetail"><a class="acqLink" href="http://www.d-tacq.com/details_page.php?prod_id=contact&page_id=2">Online Documents</a></p> 
