add sfp page .. nice 'n easy  On branch cpsc2 	modified:   www/d-tacq/acq_main_page.html

--- a/www/d-tacq/acq_main_page.html
+++ b/www/d-tacq/acq_main_page.html
@@ -32,6 +32,7 @@
           <li><a title="volts" href="acq_info_page.html">Power</a></li>
           <li><a title="top" href="acq_info_page.html">Top</a></li>
           <li><a title="interrupts" href="acq_info_page.html">Interrupts</a></li>
+	  <li><a title="sfp" href="acq_info_page.html">sfp</a></li>
 <!-- TABAPPEND -->
 <!-- TABEND -->
       </ul>
